Added 3 unit tests. See Change Log (Version 1.0.2)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
 Change Log
 ===========
 
+1.0.2
+--------
+* Added test for: 'should be able to show an error when try to save with already-existing username'
+* Added test for: 'should be able to show an error when try to save without username'
+* Added test for: 'should be able to show an error when try to save with email not properly formed'
+
 1.0.1
 --------
 * Added change log
